[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.18.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "logger>=1.4",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "phonenumbers>=9.0.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot==13.7",
    "requests>=2.32.3",
    "telegram>=0.0.1",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
]
